--- a/immunicare/.gitignore
+++ b/immunicare/.gitignore
@@ -12,6 +12,11 @@
 .swiftpm/
 migrate_working_dir/
 
+# Log files
+hs_err_pid*.log
+flutter_*.log
+replay_pid*.log
+
 # IntelliJ related
 *.iml
 *.ipr
