--- a/immunicare/android/app/build.gradle
+++ b/immunicare/android/app/build.gradle
@@ -45,3 +45,10 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform ('com.google.firebase:firebase-bom:30.3.0')
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version'
+
+}
