--- a/immunicare/android/build.gradle
+++ b/immunicare/android/build.gradle
@@ -1,3 +1,24 @@
+buildscript {
+    exit.kotlin_version = '1.6.10'
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin'
+
+    }
+
+    application {
+        mainClass = 'demo.App' 
+        
+    }
+
+}
+
 allprojects {
     repositories {
         google()
