--- a/immunicare/pubspec.yaml
+++ b/immunicare/pubspec.yaml
@@ -30,10 +30,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
+  flex_color_picker: ^3.5.1
+  image_picker: ^1.1.2
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  google_sign_in: ^6.3.0
+  cloud_firestore: ^5.4.4
+  uuid: ^4.5.1
+  firebase_storage: ^12.3.2
+  dotted_border: ^2.1.0
+  http: ^1.1.0
+  timezone: ^0.9.2
+  table_calendar: ^3.0.9
+  flutter_local_notifications: ^16.3.0
+  form_field_validator: ^1.1.0
+  url_launcher: ^6.1.11
+  provider: ^6.0.5 
+  shared_preferences: ^2.2.0 
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  hydrated_bloc: ^9.1.2
+  path_provider: ^2.1.1
+  bloc_test: ^9.1.0
+  mockito: ^5.3.2
+  firebase_core_platform_interface: 5.4.0
+  # firebase_core_mocks: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +83,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets: 
+    - assets/googleSignIn.jpg
+    - assets/child.jpg
+    - assets/logo.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
